<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DADADA"
        tools:context=".fragments.BrowsingFragment">

        <TextView
            android:id="@+id/browsingHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_members"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029999971" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/mPListing"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mPListing"
            app:layout_constraintTop_toBottomOf="@+id/browsingHeader"
            app:layout_constraintVertical_bias="0.087">

            <RadioButton
                android:id="@+id/sortBy_first_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C6000000"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black" />

            <RadioButton
                android:id="@+id/sortBy_last_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C6000000"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black" />

            <RadioButton
                android:id="@+id/sortBy_party_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C6000000"
                android:text="@string/party"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <RadioButton
                android:id="@+id/sortBy_status_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#C6000000"
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

        </RadioGroup>

        <TextView
            android:id="@+id/sortBy_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textColor="#C6000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/browsingHeader"
            app:layout_constraintVertical_bias="0.8" />

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:ems="10"
            android:hint="@string/write_a_name_or_party"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#8F000000"
            app:layout_constraintBaseline_toBaselineOf="@+id/search_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/radioGroup" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mPListing"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_btn"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.029999971" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
