<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DADADA"
        tools:context=".fragments.DetailsFragment">

        <TextView
            android:id="@+id/mp_minister_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#C6000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/mp_twitter_link_text"
            app:layout_constraintEnd_toEndOf="@+id/mp_party_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mp_party_text"
            app:layout_constraintTop_toBottomOf="@+id/mp_party_text" />

        <TextView
            android:id="@+id/mp_party_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#C6000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/addNote_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/mp_imageView"
            app:layout_constraintTop_toTopOf="@+id/mp_born_year_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/mp_twitter_link_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/app_name"
            android:textColor="#C6000000"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/addNote_button"
            app:layout_constraintEnd_toEndOf="@+id/mp_party_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mp_party_text"
            app:layout_constraintTop_toTopOf="@+id/mp_seat_number_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/mp_born_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="@+id/mp_imageView"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mp_name_text"
            app:layout_constraintVertical_bias="0.100000024"
            android:textColor="#C6000000" />

        <TextView
            android:id="@+id/mp_constituency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#C6000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/mp_seat_number_text"
            app:layout_constraintEnd_toEndOf="@+id/mp_born_year_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mp_born_year_text"
            app:layout_constraintTop_toBottomOf="@+id/mp_born_year_text" />

        <TextView
            android:id="@+id/mp_seat_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#C6000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="@+id/mp_born_year_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mp_born_year_text"
            app:layout_constraintTop_toTopOf="@+id/mp_born_year_text" />

        <TextView
            android:id="@+id/mp_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/mp_imageView"
            app:layout_constraintStart_toStartOf="@+id/mp_imageView"
            app:layout_constraintTop_toBottomOf="@+id/mp_imageView"
            app:layout_constraintVertical_bias="0.01999998" />

        <ImageView
            android:id="@+id/mp_imageView"
            android:layout_width="154dp"
            android:layout_height="204dp"
            android:contentDescription="@string/mp_image_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/mp_imageView"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.93" />

        <Button
            android:id="@+id/addNote_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/make_a_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
